syntax = "proto3";
package enrollment;

option java_multiple_files = true;
option java_package = "com.example.enrollment.grpc";
option java_outer_classname = "EnrollmentProto";

message Empty {}

message LoginRequest { string username = 1; string password = 2; }
message LoginResponse { string token = 1; string role = 2; }
message LogoutRequest { string token = 1; }
message LogoutResponse { bool success = 1; }

message RegisterRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}
message RegisterResponse {
  bool success = 1;
  string message = 2;
}

message Course { string id = 1; string name = 2; uint32 units = 3; bool laboratory = 4; string faculty_id = 5; uint32 capacity = 6; }
message ListCoursesRequest {}
message ListCoursesResponse { repeated Course courses = 1; }

message EnrollRequest { string student_id = 1; string course_id = 2; }
message EnrollResponse { bool success = 1; string message = 2; }

message GetEnrollmentCountRequest { string course_id = 1; }
message GetEnrollmentCountResponse { uint32 count = 1; }

message GetGradesRequest { string student_id = 1; }
message GradeEntry { string course_id = 1; string course_name = 2; string grade = 3; }
message GetGradesResponse { repeated GradeEntry grades = 1; }

message UploadGradeRequest { string student_id = 1; string course_id = 2; string grade = 3; }
message UploadGradeResponse { bool success = 1; }

message GetStudentOverviewResponse { repeated GradeEntry entries = 1; }

message CompleteCourseRequest {
  string course_id = 1;
  uint32 term_number = 2; // 1-3
  string academic_year_range = 3; // YYYY-YYYY
}
message CompleteCourseResponse { uint32 affected = 1; }
message DeleteCourseRequest {
  string courseId = 1;
}

message DeleteCourseResponse {
  bool success = 1;
  string message = 2;
}


message GetStudentHistoryRequest { string student_id = 1; }
message HistoryEntry {
  string course_id = 1;
  string course_name = 2;
  string grade = 3;
  uint32 term_number = 4;
  string academic_year_range = 5;
  string completed_at = 6;
}
message GetStudentHistoryResponse { repeated HistoryEntry entries = 1; }

message IsCourseCompletedRequest { string course_id = 1; }
message IsCourseCompletedResponse { bool completed = 1; }

message CreateCourseRequest {
  string id = 1;
  string name = 2;
  uint32 units = 3;
  bool laboratory = 4;
  string faculty_id = 5;
  uint32 capacity = 6;
}

message UpdateCourseRequest {
  string id = 1;
  string name = 2;
  uint32 units = 3;
  bool laboratory = 4;
  string faculty_id = 5;
  uint32 capacity = 6;
}

message UpdateCourseResponse {
  bool success = 1;
  string message = 2;
}

message CreateCourseResponse { bool success = 1; }
message ListFacultyCoursesRequest { string faculty_id = 1; }
message ListFacultyCoursesResponse { repeated Course courses = 1; }

message UpdateCourseCapacityRequest { string id = 1; uint32 capacity = 2; }
message UpdateCourseCapacityResponse { bool success = 1; }

message ListStudentsInCourseRequest { string course_id = 1; }
message StudentCourseGrade { string student_id = 1; string grade = 2; }
message ListStudentsInCourseResponse { repeated StudentCourseGrade entries = 1; }

message ListUsersRequest {}

message User {
  string id = 1;
  string role = 2;
}
message ListUsersResponse {
  repeated User users = 1;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
service CourseService {
  rpc ListCourses(ListCoursesRequest) returns (ListCoursesResponse);
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse);
  rpc ListFacultyCourses(ListFacultyCoursesRequest) returns (ListFacultyCoursesResponse);
  rpc UpdateCourseCapacity(UpdateCourseCapacityRequest) returns (UpdateCourseCapacityResponse);
  rpc DeleteCourse(DeleteCourseRequest) returns (DeleteCourseResponse);
  rpc UpdateCourse(UpdateCourseRequest) returns (UpdateCourseResponse);
}
service EnrollmentService {
  rpc Enroll(EnrollRequest) returns (EnrollResponse);
  rpc Drop(EnrollRequest) returns (EnrollResponse);
  rpc ListStudentsInCourse(ListStudentsInCourseRequest) returns (ListStudentsInCourseResponse);
  rpc GetEnrollmentCount(GetEnrollmentCountRequest) returns (GetEnrollmentCountResponse);
  rpc CompleteCourse(CompleteCourseRequest) returns (CompleteCourseResponse);
  rpc IsCourseCompleted(IsCourseCompletedRequest) returns (IsCourseCompletedResponse);
}
service GradesService {
  rpc GetGrades(GetGradesRequest) returns (GetGradesResponse);
  rpc UploadGrade(UploadGradeRequest) returns (UploadGradeResponse);
}
service StudentService {
  rpc GetStudentOverview(GetGradesRequest) returns (GetStudentOverviewResponse);
  rpc GetStudentHistory(GetStudentHistoryRequest) returns (GetStudentHistoryResponse);
}
